# path-tmpl

./: .gitignore  LICENSE  README.md  changelog.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/: dependabot.yaml
.github/workflows/: publish.yml  tests.yml
pathtmpl/: __init__.py  models.py  template.py
tests/: test_get_evaluated_path.py
