[project]
name = "pathtmpl"
version = "0.3"
description = "Path Template"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    { name = "Eugen Ciur", email = "eugen@papermerge.com" }
]
dependencies = [
    "jinja2>=3.1.4,<4",
    "pydantic>=2.9,<3",
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
