[project]
name = "pathtmpl"
version = "0.3"
description = "Path Template"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    { name = "Eugen Ciur", email = "eugen@papermerge.com" }
]
dependencies = [
    "jinja2",
    "pydantic"
]

[tool.poetry.group.dev.dependencies]
pytest = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
