[project]
name = "pathtmpl"
version = "0.3"
description = "Path Template"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    { name = "Eugen Ciur", email = "eugen@papermerge.com" }
]
dependencies = [
    "jinja2",
    "pydantic"
]

[dependency-groups]
dev = [
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
